--- a/public/views/friendList.ejs
+++ b/public/views/friendList.ejs
@@ -8,10 +8,16 @@
   <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-  <p class="text-[3.4vw] font-bold border-b h-[10vw] flex items-center" >친구</p>
-  <ul class="friend-list w-[100vw] h-[90vh] border">
+  <p class="text-[3.4vw] font-bold border-b flex items-center h-[5vh] " >친구</p>
+  <ul class="friend-list w-[100vw] h-[87vh]">
   
   </ul>
+  <div class="flex h-[8vh] w-[100vw] navbar border justify-around ">
+    <div class="w-[25vw] border-r flex items-center justify-center cursor-pointer">1</div>
+    <div class="w-[25vw] border-r flex items-center justify-center cursor-pointer">2</div>
+    <div class="w-[25vw] border-r flex items-center justify-center cursor-pointer">3</div>
+    <div class="w-[25vw] flex items-center justify-center">4</div>
+  </div>
 
 
   <script type="module" src="/js/friend.js"></script>
