--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -5,15 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>로그인</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   
   <form method="post" action="/login" class="flex flex-col w-[100vw] h-[100vh] justify-center items-center">
-    <div class="flex mb-[2vw]"><p class="w-[12vw]">아이디</p><input class="border user-id" type="text" name="userid"></div>
+    <h1 class="text-[5vw] mb-4">login</h1>
+    <div class="flex mb-[2vw]"><p class="w-[12vw]">아이디</p><input class="border user-id" type="text" name="email"></div>
     <div class="flex"><p class="w-[12vw]">비밀번호</p><input class="border user-pw " type="password" name="passwd"></div>
-    <button type="submit" class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink]">로그인</button>
+    <div class="flex">
+      <button type="submit" class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink] ml-[10vw] ">로그인</button>
+      <button  class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink] ml-[4vw]"><a href="/register">회원가입</a></button>
+    </div>
+ 
   </form>
   <script type="module" src="/js/login.js"></script>
 </body>
