--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -18,8 +18,8 @@
       <button type="submit" class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink] ml-[10vw] ">로그인</button>
       <button  class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink] ml-[4vw]"><a href="/register">회원가입</a></button>
     </div>
- 
   </form>
+  <button class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink] ml-[4vw]" onclick="location.href='/user/auth'">프랜드가기</button>
   <script type="module" src="/js/login.js"></script>
 </body>
 
