--- a/public/views/friendList.ejs
+++ b/public/views/friendList.ejs
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-  <p class="text-[3.4vw] font-bold border-b flex items-center h-[5vh] " >친구</p>
+  <div class="flex font-bold border-b h-[5vh] items-center justify-between">
+    <p class="ml-[1vw] text-[3.4vw] " >친구</p>
+    <a class="mr-[1vw] text-[2.5vw] " href="/logout" >로그아웃</a>
+  </div>
+  
   <ul class="friend-list w-[100vw] h-[87vh]">
   
   </ul>
