--- a/public/views/chatroom.ejs
+++ b/public/views/chatroom.ejs
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="flex font-bold border-b h-[5vh] items-center justify-between">
-    <p class="ml-[1vw] text-[3.4vw] " >친구</p>
-    <a class="mr-[1vw] text-[2.5vw] " href="/logout" >로그아웃</a>
+    <p class="ml-[1vw] text-[3.4vw] " >채팅방</p>
+     
   </div>
   
   <ul class="friend-list w-[100vw] h-[87vh]">
@@ -18,8 +18,7 @@
   </ul>
  
   <%-include('nav')%>
-
-  <script type="module" src="/js/friend.js"></script>
+  <script type="module" src="/js/chatroom.js"></script>
 </body>
 
 </html>
