--- a/public/views/friendList.ejs
+++ b/public/views/friendList.ejs
@@ -18,7 +18,7 @@
   </ul>
  
   <%-include('nav')%>
-
+  <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="/js/friend.js"></script>
 </body>
 
