--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -10,6 +10,6 @@
   <div class=" bg-black flex w-[100vw] h-[100vh]">
     <h3>로딩중</h3>
   </div>
-  
+  <script type="module" src="/js/index.js"></script>
 </body>
 </html>
