--- a/public/views/friendList.ejs
+++ b/public/views/friendList.ejs
@@ -13,7 +13,7 @@
     <a class="mr-[1vw] text-[2.5vw] " href="/logout" >로그아웃</a>
   </div>
   
-  <ul class="friend-list w-[100vw] h-[87vh]">
+  <ul class="friend-list w-[100vw] h-[87vh]" id="friend-list">
   
   </ul>
  
