--- a/public/css/index.css
+++ b/public/css/index.css
@@ -571,6 +571,18 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
+.z-10 {
+	z-index: 10;
+}
+.m-\[0\.5vw\] {
+	margin: 0.5vw;
+}
+.m-0 {
+	margin: 0px;
+}
+.m-\[1vw\] {
+	margin: 1vw;
+}
 .mt-\[2vw\] {
 	margin-top: 2vw;
 }
@@ -598,11 +610,17 @@ video {
 .ml-\[4vw\] {
 	margin-left: 4vw;
 }
+.mt-\[1vw\] {
+	margin-top: 1vw;
+}
 .flex {
 	display: flex;
 }
 .h-\[10vw\] {
 	height: 10vw;
+}
+.h-\[3vw\] {
+	height: 3vw;
 }
 .h-\[5vh\] {
 	height: 5vh;
@@ -616,11 +634,29 @@ video {
 .h-\[8vh\] {
 	height: 8vh;
 }
+.h-\[100vw\] {
+	height: 100vw;
+}
+.h-\[20vw\] {
+	height: 20vw;
+}
 .h-\[5vw\] {
 	height: 5vw;
 }
-.h-\[3vw\] {
-	height: 3vw;
+.h-\[2vw\] {
+	height: 2vw;
+}
+.h-\[4vw\] {
+	height: 4vw;
+}
+.h-\[98vh\] {
+	height: 98vh;
+}
+.h-\[96vh\] {
+	height: 96vh;
+}
+.h-\[97vh\] {
+	height: 97vh;
 }
 .w-\[10vw\] {
 	width: 10vw;
@@ -628,8 +664,8 @@ video {
 .w-\[60vw\] {
 	width: 60vw;
 }
-.w-\[vw\] {
-	width: vw;
+.w-\[3vw\] {
+	width: 3vw;
 }
 .w-\[70vw\] {
 	width: 70vw;
@@ -646,8 +682,14 @@ video {
 .w-\[5vw\] {
 	width: 5vw;
 }
-.w-\[3vw\] {
-	width: 3vw;
+.w-\[20vw\] {
+	width: 20vw;
+}
+.w-\[4vw\] {
+	width: 4vw;
+}
+.w-\[3\.8vw\] {
+	width: 3.8vw;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -673,6 +715,15 @@ video {
 .rounded-\[3vw\] {
 	border-radius: 3vw;
 }
+.rounded-md {
+	border-radius: 0.375rem;
+}
+.rounded-2xl {
+	border-radius: 1rem;
+}
+.rounded-lg {
+	border-radius: 0.5rem;
+}
 .border {
 	border-width: 1px;
 }
@@ -682,6 +733,10 @@ video {
 .border-r {
 	border-right-width: 1px;
 }
+.bg-gray-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
 .bg-\[\#c7c7c7\] {
 	--tw-bg-opacity: 1;
 	background-color: rgba(199, 199, 199, var(--tw-bg-opacity));
@@ -690,16 +745,48 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-gray-200 {
+.bg-\[\#a7a7aa\] {
 	--tw-bg-opacity: 1;
-	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+	background-color: rgba(167, 167, 170, var(--tw-bg-opacity));
 }
-.bg-green-500 {
+.bg-gray-50 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+.bg-blue-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
+}
+.bg-blue-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .p-\[1vw\] {
 	padding: 1vw;
+}
+.p-\[1\.5vw\] {
+	padding: 1.5vw;
+}
+.p-\[0\.5vw\] {
+	padding: 0.5vw;
+}
+.p-\[0\.8vw\] {
+	padding: 0.8vw;
+}
+.p-0 {
+	padding: 0px;
 }
 .pt-\[2vw\] {
 	padding-top: 2vw;
@@ -709,6 +796,21 @@ video {
 }
 .pb-\[2vw\] {
 	padding-bottom: 2vw;
+}
+.pt-\[1vw\] {
+	padding-top: 1vw;
+}
+.pb-\[1vw\] {
+	padding-bottom: 1vw;
+}
+.pt-\[0\.5vw\] {
+	padding-top: 0.5vw;
+}
+.pt-\[0\.4vw\] {
+	padding-top: 0.4vw;
+}
+.text-center {
+	text-align: center;
 }
 .text-\[2\.8vw\] {
 	font-size: 2.8vw;
@@ -722,8 +824,56 @@ video {
 .text-\[5vw\] {
 	font-size: 5vw;
 }
+.text-\[2vw\] {
+	font-size: 2vw;
+}
+.text-\[1\.5vw\] {
+	font-size: 1.5vw;
+}
+.text-\[1\.2vw\] {
+	font-size: 1.2vw;
+}
+.text-\[1vw\] {
+	font-size: 1vw;
+}
 .font-bold {
 	font-weight: 700;
+}
+.text-\[green\] {
+	--tw-text-opacity: 1;
+	color: rgba(0, 128, 0, var(--tw-text-opacity));
+}
+.text-\[\#c7c7c7\] {
+	--tw-text-opacity: 1;
+	color: rgba(199, 199, 199, var(--tw-text-opacity));
+}
+.text-\[grey\] {
+	--tw-text-opacity: 1;
+	color: rgba(128, 128, 128, var(--tw-text-opacity));
+}
+.text-\[\#a7a7aa\] {
+	--tw-text-opacity: 1;
+	color: rgba(167, 167, 170, var(--tw-text-opacity));
+}
+.text-\[white\] {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.text-\[black\] {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.opacity-50 {
+	opacity: 0.5;
+}
+.opacity-100 {
+	opacity: 1;
+}
+.opacity-10 {
+	opacity: 0.1;
+}
+.ring-opacity-50 {
+	--tw-ring-opacity: 0.5;
 }
 .hover\:bg-\[pink\]:hover {
 	--tw-bg-opacity: 1;
