--- a/public/css/index.css
+++ b/public/css/index.css
@@ -570,18 +570,45 @@ video {
 *, ::before, ::after {
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
 }
-.z-10 {
-	z-index: 10;
+.absolute {
+	position: absolute;
 }
-.m-\[0\.5vw\] {
-	margin: 0.5vw;
+.relative {
+	position: relative;
 }
-.m-0 {
-	margin: 0px;
+.top-\[1\.1vw\] {
+	top: 1.1vw;
 }
-.m-\[1vw\] {
-	margin: 1vw;
+.left-\[1vw\] {
+	left: 1vw;
+}
+.top-\[0\.8vw\] {
+	top: 0.8vw;
+}
+.left-\[0\.8vw\] {
+	left: 0.8vw;
+}
+.top-\[0\.7vw\] {
+	top: 0.7vw;
+}
+.left-\[0\.9vw\] {
+	left: 0.9vw;
+}
+.top-\[10px\] {
+	top: 10px;
+}
+.top-\[15px\] {
+	top: 15px;
+}
+.top-\[18px\] {
+	top: 18px;
+}
+.left-\[18px\] {
+	left: 18px;
 }
 .mt-\[2vw\] {
 	margin-top: 2vw;
@@ -610,8 +637,62 @@ video {
 .ml-\[4vw\] {
 	margin-left: 4vw;
 }
-.mt-\[1vw\] {
-	margin-top: 1vw;
+.mt-\[30vw\] {
+	margin-top: 30vw;
+}
+.ml-\[0\.4vw\] {
+	margin-left: 0.4vw;
+}
+.mr-\[0\.4vw\] {
+	margin-right: 0.4vw;
+}
+.mb-\[1vw\] {
+	margin-bottom: 1vw;
+}
+.mb-\[0\.5vw\] {
+	margin-bottom: 0.5vw;
+}
+.mb-\[0\.4vw\] {
+	margin-bottom: 0.4vw;
+}
+.mb-\[0\.2vw\] {
+	margin-bottom: 0.2vw;
+}
+.mt-\[200px\] {
+	margin-top: 200px;
+}
+.mt-\[500px\] {
+	margin-top: 500px;
+}
+.mt-\[700px\] {
+	margin-top: 700px;
+}
+.mt-\[600px\] {
+	margin-top: 600px;
+}
+.mt-\[480px\] {
+	margin-top: 480px;
+}
+.mt-\[580px\] {
+	margin-top: 580px;
+}
+.ml-1 {
+	margin-left: 0.25rem;
+}
+.ml-2 {
+	margin-left: 0.5rem;
+}
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
+.mb-1 {
+	margin-bottom: 0.25rem;
+}
+.mr-1 {
+	margin-right: 0.25rem;
+}
+.mt-\[610px\] {
+	margin-top: 610px;
 }
 .flex {
 	display: flex;
@@ -634,29 +715,35 @@ video {
 .h-\[8vh\] {
 	height: 8vh;
 }
-.h-\[100vw\] {
-	height: 100vw;
-}
-.h-\[20vw\] {
-	height: 20vw;
-}
-.h-\[5vw\] {
-	height: 5vw;
-}
-.h-\[2vw\] {
-	height: 2vw;
-}
-.h-\[4vw\] {
-	height: 4vw;
-}
 .h-\[98vh\] {
 	height: 98vh;
 }
-.h-\[96vh\] {
-	height: 96vh;
+.h-\[0\.6vw\] {
+	height: 0.6vw;
 }
-.h-\[97vh\] {
-	height: 97vh;
+.h-\[0\.4vw\] {
+	height: 0.4vw;
+}
+.h-96 {
+	height: 24rem;
+}
+.h-\[5px\] {
+	height: 5px;
+}
+.h-\[10px\] {
+	height: 10px;
+}
+.h-\[15px\] {
+	height: 15px;
+}
+.h-\[13px\] {
+	height: 13px;
+}
+.h-\[12px\] {
+	height: 12px;
+}
+.h-\[8px\] {
+	height: 8px;
 }
 .w-\[10vw\] {
 	width: 10vw;
@@ -679,17 +766,98 @@ video {
 .w-\[25vw\] {
 	width: 25vw;
 }
-.w-\[5vw\] {
-	width: 5vw;
-}
-.w-\[20vw\] {
-	width: 20vw;
-}
-.w-\[4vw\] {
-	width: 4vw;
-}
 .w-\[3\.8vw\] {
 	width: 3.8vw;
+}
+.w-\[1\.5vw\] {
+	width: 1.5vw;
+}
+.w-\[0\.6vw\] {
+	width: 0.6vw;
+}
+.w-\[0\.4vw\] {
+	width: 0.4vw;
+}
+.w-\[18vw\] {
+	width: 18vw;
+}
+.w-\[58vw\] {
+	width: 58vw;
+}
+.w-\[1\.0vw\] {
+	width: 1.0vw;
+}
+.w-\[1\.2vw\] {
+	width: 1.2vw;
+}
+.w-\[16vw\] {
+	width: 16vw;
+}
+.w-\[14vw\] {
+	width: 14vw;
+}
+.w-\[13vw\] {
+	width: 13vw;
+}
+.w-11 {
+	width: 2.75rem;
+}
+.w-16 {
+	width: 4rem;
+}
+.w-3 {
+	width: 0.75rem;
+}
+.w-10 {
+	width: 2.5rem;
+}
+.w-6 {
+	width: 1.5rem;
+}
+.w-7 {
+	width: 1.75rem;
+}
+.w-\[5px\] {
+	width: 5px;
+}
+.w-\[10px\] {
+	width: 10px;
+}
+.w-\[15px\] {
+	width: 15px;
+}
+.w-\[13px\] {
+	width: 13px;
+}
+.w-\[12px\] {
+	width: 12px;
+}
+.w-\[8px\] {
+	width: 8px;
+}
+.w-64 {
+	width: 16rem;
+}
+.w-48 {
+	width: 12rem;
+}
+.w-52 {
+	width: 13rem;
+}
+.w-\[200px\] {
+	width: 200px;
+}
+.w-\[220px\] {
+	width: 220px;
+}
+.w-\[208px\] {
+	width: 208px;
+}
+.min-w-\[208px\] {
+	min-width: 208px;
+}
+.min-w-\[64px\] {
+	min-width: 64px;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -715,14 +883,26 @@ video {
 .rounded-\[3vw\] {
 	border-radius: 3vw;
 }
-.rounded-md {
-	border-radius: 0.375rem;
+.rounded-lg {
+	border-radius: 0.5rem;
+}
+.rounded-\[100vw\] {
+	border-radius: 100vw;
 }
 .rounded-2xl {
 	border-radius: 1rem;
 }
-.rounded-lg {
-	border-radius: 0.5rem;
+.rounded-xl {
+	border-radius: 0.75rem;
+}
+.rounded-3xl {
+	border-radius: 1.5rem;
+}
+.rounded-sm {
+	border-radius: 0.125rem;
+}
+.rounded-\[300px\] {
+	border-radius: 300px;
 }
 .border {
 	border-width: 1px;
@@ -745,48 +925,82 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-\[\#a7a7aa\] {
-	--tw-bg-opacity: 1;
-	background-color: rgba(167, 167, 170, var(--tw-bg-opacity));
-}
-.bg-gray-50 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.bg-gray-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
-.bg-blue-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
-}
-.bg-blue-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(147, 197, 253, var(--tw-bg-opacity));
-}
-.bg-blue-100 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
-}
 .bg-gray-100 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
+.bg-purple-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
+}
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-green-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-purple-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
+}
+.bg-purple-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
+}
 .p-\[1vw\] {
 	padding: 1vw;
-}
-.p-\[1\.5vw\] {
-	padding: 1.5vw;
 }
 .p-\[0\.5vw\] {
 	padding: 0.5vw;
 }
-.p-\[0\.8vw\] {
-	padding: 0.8vw;
+.p-1 {
+	padding: 0.25rem;
 }
-.p-0 {
-	padding: 0px;
+.p-5 {
+	padding: 1.25rem;
+}
+.p-4 {
+	padding: 1rem;
+}
+.p-2 {
+	padding: 0.5rem;
+}
+.p-\[1px\] {
+	padding: 1px;
+}
+.p-\[10px\] {
+	padding: 10px;
+}
+.p-\[5px\] {
+	padding: 5px;
+}
+.p-\[4px\] {
+	padding: 4px;
+}
+.p-\[6px\] {
+	padding: 6px;
+}
+.p-\[6\.5px\] {
+	padding: 6.5px;
+}
+.p-3 {
+	padding: 0.75rem;
+}
+.p-\[2px\] {
+	padding: 2px;
+}
+.p-\[3px\] {
+	padding: 3px;
+}
+.px-9 {
+	padding-left: 2.25rem;
+	padding-right: 2.25rem;
+}
+.px-40 {
+	padding-left: 10rem;
+	padding-right: 10rem;
 }
 .pt-\[2vw\] {
 	padding-top: 2vw;
@@ -797,20 +1011,125 @@ video {
 .pb-\[2vw\] {
 	padding-bottom: 2vw;
 }
-.pt-\[1vw\] {
-	padding-top: 1vw;
-}
-.pb-\[1vw\] {
-	padding-bottom: 1vw;
-}
-.pt-\[0\.5vw\] {
-	padding-top: 0.5vw;
-}
 .pt-\[0\.4vw\] {
 	padding-top: 0.4vw;
 }
-.text-center {
-	text-align: center;
+.pl-\[0\.2vw\] {
+	padding-left: 0.2vw;
+}
+.pr-\[0\.2vw\] {
+	padding-right: 0.2vw;
+}
+.pt-\[0\.3vw\] {
+	padding-top: 0.3vw;
+}
+.pb-\[0\.3vw\] {
+	padding-bottom: 0.3vw;
+}
+.pl-\[0\.4vw\] {
+	padding-left: 0.4vw;
+}
+.pr-\[0\.4vw\] {
+	padding-right: 0.4vw;
+}
+.pt-1 {
+	padding-top: 0.25rem;
+}
+.pt-3 {
+	padding-top: 0.75rem;
+}
+.pl-1 {
+	padding-left: 0.25rem;
+}
+.pr-1 {
+	padding-right: 0.25rem;
+}
+.pt-2 {
+	padding-top: 0.5rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
+.pb-1 {
+	padding-bottom: 0.25rem;
+}
+.pl-\[8px\] {
+	padding-left: 8px;
+}
+.pr-\[8px\] {
+	padding-right: 8px;
+}
+.pt-\[10px\] {
+	padding-top: 10px;
+}
+.pb-\[10px\] {
+	padding-bottom: 10px;
+}
+.pl-\[6px\] {
+	padding-left: 6px;
+}
+.pr-\[6px\] {
+	padding-right: 6px;
+}
+.pt-\[7px\] {
+	padding-top: 7px;
+}
+.pb-\[7px\] {
+	padding-bottom: 7px;
+}
+.pl-2 {
+	padding-left: 0.5rem;
+}
+.pr-2 {
+	padding-right: 0.5rem;
+}
+.pt-4 {
+	padding-top: 1rem;
+}
+.pl-\[4px\] {
+	padding-left: 4px;
+}
+.pr-\[4px\] {
+	padding-right: 4px;
+}
+.pt-\[5px\] {
+	padding-top: 5px;
+}
+.pb-\[5px\] {
+	padding-bottom: 5px;
+}
+.pl-\[5px\] {
+	padding-left: 5px;
+}
+.pr-\[5px\] {
+	padding-right: 5px;
+}
+.pt-\[6px\] {
+	padding-top: 6px;
+}
+.pb-\[6px\] {
+	padding-bottom: 6px;
+}
+.font-neob {
+	font-family: NeoB;
+}
+.font-neosb {
+	font-family: NeoSB;
+}
+.font-neoh {
+	font-family: NeoH;
+}
+.font-neol {
+	font-family: NeoL;
+}
+.font-neoeb {
+	font-family: NeoEB;
+}
+.font-neom {
+	font-family: NeoM;
+}
+.font-neor {
+	font-family: NeoR;
 }
 .text-\[2\.8vw\] {
 	font-size: 2.8vw;
@@ -824,58 +1143,145 @@ video {
 .text-\[5vw\] {
 	font-size: 5vw;
 }
-.text-\[2vw\] {
-	font-size: 2vw;
-}
-.text-\[1\.5vw\] {
-	font-size: 1.5vw;
-}
-.text-\[1\.2vw\] {
-	font-size: 1.2vw;
+.text-\[0\.8vw\] {
+	font-size: 0.8vw;
 }
 .text-\[1vw\] {
 	font-size: 1vw;
 }
+.text-\[1\.5vw\] {
+	font-size: 1.5vw;
+}
+.text-\[1\.3vw\] {
+	font-size: 1.3vw;
+}
+.text-\[1\.2vw\] {
+	font-size: 1.2vw;
+}
+.text-\[1\.0vw\] {
+	font-size: 1.0vw;
+}
+.text-\[0\.7vw\] {
+	font-size: 0.7vw;
+}
+.text-\[0\.78vw\] {
+	font-size: 0.78vw;
+}
+.text-\[0\.6vw\] {
+	font-size: 0.6vw;
+}
+.text-\[0\.9vw\] {
+	font-size: 0.9vw;
+}
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+}
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
 .font-bold {
 	font-weight: 700;
-}
-.text-\[green\] {
-	--tw-text-opacity: 1;
-	color: rgba(0, 128, 0, var(--tw-text-opacity));
-}
-.text-\[\#c7c7c7\] {
-	--tw-text-opacity: 1;
-	color: rgba(199, 199, 199, var(--tw-text-opacity));
-}
-.text-\[grey\] {
-	--tw-text-opacity: 1;
-	color: rgba(128, 128, 128, var(--tw-text-opacity));
-}
-.text-\[\#a7a7aa\] {
-	--tw-text-opacity: 1;
-	color: rgba(167, 167, 170, var(--tw-text-opacity));
-}
-.text-\[white\] {
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .text-\[black\] {
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
-.opacity-50 {
-	opacity: 0.5;
+.text-\[\#a7a7aa\] {
+	--tw-text-opacity: 1;
+	color: rgba(167, 167, 170, var(--tw-text-opacity));
 }
-.opacity-100 {
-	opacity: 1;
+.text-gray-300 {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
-.opacity-10 {
-	opacity: 0.1;
+.text-gray-500 {
+	--tw-text-opacity: 1;
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
-.ring-opacity-50 {
-	--tw-ring-opacity: 0.5;
+.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
+.text-gray-400 {
+	--tw-text-opacity: 1;
+	color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+.text-purple-900 {
+	--tw-text-opacity: 1;
+	color: rgba(76, 29, 149, var(--tw-text-opacity));
+}
+.text-purple-800 {
+	--tw-text-opacity: 1;
+	color: rgba(91, 33, 182, var(--tw-text-opacity));
+}
+.text-\[\#c086c5\] {
+	--tw-text-opacity: 1;
+	color: rgba(192, 134, 197, var(--tw-text-opacity));
+}
+.shadow-sm {
+	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl {
+	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@font-face {
+    font-family:"NeoB";
+    src:url("./../asset/font/appleSDGothicNeoB.ttf");
+} 
+@font-face {
+    font-family:"NeoEB";
+    src:url("./../asset/font/appleSDGothicNeoEB.ttf");
+} 
+@font-face {
+    font-family:"NeoH";
+    src:url("./../asset/font/appleSDGothicNeoH.ttf");
+} 
+@font-face {
+    font-family:"NeoL";
+    src:url("./../asset/font/appleSDGothicNeoL.ttf");
+} 
+@font-face {
+    font-family:"NeoM";
+    src:url("./../asset/font/appleSDGothicNeoM.ttf");
+} 
+@font-face {
+    font-family:"NeoR";
+    src:url("./../asset/font/appleSDGothicNeoR.ttf");
+} 
+@font-face {
+    font-family:"NeoSB";
+    src:url("./../asset/font/appleSDGothicNeoSB.ttf");
+} 
+@font-face {
+    font-family:"NeoT";
+    src:url("./../asset/font/appleSDGothicNeoT.ttf");
+} 
+@font-face {
+    font-family:"NeoUL";
+    src:url("./../asset/font/appleSDGothicNeoUL.ttf");
+} 
 .hover\:bg-\[pink\]:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 192, 203, var(--tw-bg-opacity));
-}
+} 
