--- a/public/css/index.css
+++ b/public/css/index.css
@@ -574,6 +574,9 @@ video {
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
 }
+.fixed {
+	position: fixed;
+}
 .absolute {
 	position: absolute;
 }
@@ -585,6 +588,30 @@ video {
 }
 .left-\[18px\] {
 	left: 18px;
+}
+.top-\[1000px\] {
+	top: 1000px;
+}
+.top-\[800px\] {
+	top: 800px;
+}
+.top-\[700px\] {
+	top: 700px;
+}
+.top-\[850px\] {
+	top: 850px;
+}
+.top-\[950px\] {
+	top: 950px;
+}
+.top-\[900px\] {
+	top: 900px;
+}
+.top-\[890px\] {
+	top: 890px;
+}
+.z-10 {
+	z-index: 10;
 }
 .mt-\[2vw\] {
 	margin-top: 2vw;
@@ -613,17 +640,11 @@ video {
 .ml-\[4vw\] {
 	margin-left: 4vw;
 }
-.mt-\[550px\] {
-	margin-top: 550px;
-}
 .ml-2 {
 	margin-left: 0.5rem;
 }
-.mt-1 {
-	margin-top: 0.25rem;
-}
-.mt-2 {
-	margin-top: 0.5rem;
+.mb-1 {
+	margin-bottom: 0.25rem;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
@@ -631,14 +652,11 @@ video {
 .mr-1 {
 	margin-right: 0.25rem;
 }
-.mb-1 {
-	margin-bottom: 0.25rem;
-}
 .ml-1 {
 	margin-left: 0.25rem;
 }
-.ml-3 {
-	margin-left: 0.75rem;
+.mt-1 {
+	margin-top: 0.25rem;
 }
 .ml-40 {
 	margin-left: 10rem;
@@ -646,20 +664,68 @@ video {
 .mt-\[600px\] {
 	margin-top: 600px;
 }
-.ml-4 {
-	margin-left: 1rem;
+.mt-2 {
+	margin-top: 0.5rem;
 }
-.ml-10 {
-	margin-left: 2.5rem;
-}
-.ml-12 {
-	margin-left: 3rem;
+.mr-2 {
+	margin-right: 0.5rem;
 }
 .ml-14 {
 	margin-left: 3.5rem;
 }
+.ml-3 {
+	margin-left: 0.75rem;
+}
+.ml-10 {
+	margin-left: 2.5rem;
+}
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.mt-\[200px\] {
+	margin-top: 200px;
+}
+.mt-24 {
+	margin-top: 6rem;
+}
+.mt-12 {
+	margin-top: 3rem;
+}
+.mt-16 {
+	margin-top: 4rem;
+}
+.mt-8 {
+	margin-top: 2rem;
+}
+.mt-7 {
+	margin-top: 1.75rem;
+}
 .ml-16 {
 	margin-left: 4rem;
+}
+.ml-24 {
+	margin-left: 6rem;
+}
+.mt-14 {
+	margin-top: 3.5rem;
+}
+.ml-12 {
+	margin-left: 3rem;
+}
+.ml-11 {
+	margin-left: 2.75rem;
+}
+.ml-36 {
+	margin-left: 9rem;
+}
+.mt-36 {
+	margin-top: 9rem;
+}
+.ml-44 {
+	margin-left: 11rem;
+}
+.mt-44 {
+	margin-top: 11rem;
 }
 .flex {
 	display: flex;
@@ -679,14 +745,65 @@ video {
 .h-\[100vh\] {
 	height: 100vh;
 }
-.h-\[8vh\] {
-	height: 8vh;
-}
 .h-\[12px\] {
 	height: 12px;
 }
 .h-\[8px\] {
 	height: 8px;
+}
+.h-\[8vh\] {
+	height: 8vh;
+}
+.h-10 {
+	height: 2.5rem;
+}
+.h-14 {
+	height: 3.5rem;
+}
+.h-12 {
+	height: 3rem;
+}
+.h-8 {
+	height: 2rem;
+}
+.h-6 {
+	height: 1.5rem;
+}
+.h-7 {
+	height: 1.75rem;
+}
+.h-\[30px\] {
+	height: 30px;
+}
+.h-48 {
+	height: 12rem;
+}
+.h-32 {
+	height: 8rem;
+}
+.h-24 {
+	height: 6rem;
+}
+.h-16 {
+	height: 4rem;
+}
+.h-\[20px\] {
+	height: 20px;
+}
+.h-\[900px\] {
+	height: 900px;
+}
+.h-\[800px\] {
+	height: 800px;
+}
+.h-\[80px\] {
+	height: 80px;
+}
+.h-\[780px\] {
+	height: 780px;
+}
+.h-\[790px\] {
+	height: 790px;
 }
 .w-\[10vw\] {
 	width: 10vw;
@@ -706,11 +823,8 @@ video {
 .w-\[12vw\] {
 	width: 12vw;
 }
-.w-\[25vw\] {
-	width: 25vw;
-}
-.w-16 {
-	width: 4rem;
+.w-\[208px\] {
+	width: 208px;
 }
 .w-7 {
 	width: 1.75rem;
@@ -721,41 +835,146 @@ video {
 .w-\[8px\] {
 	width: 8px;
 }
-.w-80 {
-	width: 20rem;
-}
-.w-\[1200px\] {
-	width: 1200px;
-}
-.w-\[208px\] {
-	width: 208px;
-}
-.w-\[48px\] {
-	width: 48px;
-}
-.w-\[1000px\] {
-	width: 1000px;
+.w-\[1300px\] {
+	width: 1300px;
 }
 .w-\[20px\] {
 	width: 20px;
 }
-.w-8 {
-	width: 2rem;
+.w-80 {
+	width: 20rem;
 }
-.w-10 {
-	width: 2.5rem;
+.w-\[25vw\] {
+	width: 25vw;
+}
+.w-16 {
+	width: 4rem;
+}
+.w-\[1200px\] {
+	width: 1200px;
 }
 .w-12 {
 	width: 3rem;
 }
-.min-w-\[64px\] {
-	min-width: 64px;
+.w-\[1000px\] {
+	width: 1000px;
+}
+.w-\[48px\] {
+	width: 48px;
+}
+.w-\[960px\] {
+	width: 960px;
+}
+.w-\[320px\] {
+	width: 320px;
+}
+.w-\[70px\] {
+	width: 70px;
+}
+.w-\[180px\] {
+	width: 180px;
+}
+.w-\[160px\] {
+	width: 160px;
+}
+.w-\[185px\] {
+	width: 185px;
+}
+.w-10 {
+	width: 2.5rem;
+}
+.w-14 {
+	width: 3.5rem;
+}
+.w-5 {
+	width: 1.25rem;
+}
+.w-8 {
+	width: 2rem;
+}
+.w-6 {
+	width: 1.5rem;
+}
+.w-\[30px\] {
+	width: 30px;
+}
+.w-48 {
+	width: 12rem;
+}
+.w-\[300px\] {
+	width: 300px;
+}
+.w-\[800px\] {
+	width: 800px;
+}
+.w-\[900px\] {
+	width: 900px;
+}
+.w-\[850px\] {
+	width: 850px;
+}
+.w-\[30\] {
+	width: 30;
+}
+.w-\[60px\] {
+	width: 60px;
+}
+.w-\[100px\] {
+	width: 100px;
+}
+.w-\[500px\] {
+	width: 500px;
+}
+.w-\[700px\] {
+	width: 700px;
+}
+.w-\[840px\] {
+	width: 840px;
+}
+.w-\[940px\] {
+	width: 940px;
+}
+.w-\[600px\] {
+	width: 600px;
+}
+.w-\[450px\] {
+	width: 450px;
 }
 .min-w-\[208px\] {
 	min-width: 208px;
 }
+.min-w-\[1300px\] {
+	min-width: 1300px;
+}
+.min-w-\[64px\] {
+	min-width: 64px;
+}
+.min-w-\[330px\] {
+	min-width: 330px;
+}
+.min-w-\[961px\] {
+	min-width: 961px;
+}
+.min-w-\[321px\] {
+	min-width: 321px;
+}
 .max-w-\[200px\] {
 	max-width: 200px;
+}
+.max-w-\[300px\] {
+	max-width: 300px;
+}
+.max-w-\[350px\] {
+	max-width: 350px;
+}
+.max-w-\[450px\] {
+	max-width: 450px;
+}
+.max-w-\[400px\] {
+	max-width: 400px;
+}
+.max-w-\[380px\] {
+	max-width: 380px;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -787,6 +1006,12 @@ video {
 .overflow-hidden {
 	overflow: hidden;
 }
+.overflow-x-hidden {
+	overflow-x: hidden;
+}
+.overflow-y-scroll {
+	overflow-y: scroll;
+}
 .rounded-full {
 	border-radius: 9999px;
 }
@@ -795,9 +1020,6 @@ video {
 }
 .rounded-lg {
 	border-radius: 0.5rem;
-}
-.rounded-\[300px\] {
-	border-radius: 300px;
 }
 .rounded-3xl {
 	border-radius: 1.5rem;
@@ -808,11 +1030,14 @@ video {
 .rounded-\[18px\] {
 	border-radius: 18px;
 }
-.rounded-xl {
-	border-radius: 0.75rem;
+.rounded-\[300px\] {
+	border-radius: 300px;
 }
 .rounded-2xl {
 	border-radius: 1rem;
+}
+.rounded-xl {
+	border-radius: 0.75rem;
 }
 .border {
 	border-width: 1px;
@@ -826,8 +1051,21 @@ video {
 .border-r {
 	border-right-width: 1px;
 }
-.border-t {
-	border-top-width: 1px;
+.border-black {
+	--tw-border-opacity: 1;
+	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+}
+.border-purple-200 {
+	--tw-border-opacity: 1;
+	border-color: rgba(221, 214, 254, var(--tw-border-opacity));
+}
+.border-purple-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(196, 181, 253, var(--tw-border-opacity));
+}
+.border-purple-100 {
+	--tw-border-opacity: 1;
+	border-color: rgba(237, 233, 254, var(--tw-border-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -841,9 +1079,17 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-purple-200 {
+.bg-gray-50 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.bg-purple-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
 }
 .bg-purple-300 {
 	--tw-bg-opacity: 1;
@@ -857,55 +1103,41 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
-.bg-gray-50 {
+.bg-purple-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
 }
-.bg-gray-100 {
+.bg-gray-500 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
-.bg-purple-100 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
+	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-.bg-gradient-to-l {
-	background-image: linear-gradient(to left, var(--tw-gradient-stops));
-}
-.bg-gradient-to-bl {
-	background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
 }
 .from-purple-200 {
 	--tw-gradient-from: #ddd6fe;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(221, 214, 254, 0));
 }
-.from-purple-300 {
-	--tw-gradient-from: #c4b5fd;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(196, 181, 253, 0));
-}
 .to-purple-100 {
 	--tw-gradient-to: #ede9fe;
 }
-.to-purple-200 {
-	--tw-gradient-to: #ddd6fe;
+.to-pink-100 {
+	--tw-gradient-to: #fce7f3;
 }
 .p-\[1vw\] {
 	padding: 1vw;
 }
-.p-4 {
-	padding: 1rem;
-}
 .p-1 {
 	padding: 0.25rem;
+}
+.p-3 {
+	padding: 0.75rem;
 }
 .p-2 {
 	padding: 0.5rem;
 }
-.p-3 {
-	padding: 0.75rem;
+.p-4 {
+	padding: 1rem;
 }
 .pt-\[2vw\] {
 	padding-top: 2vw;
@@ -916,8 +1148,8 @@ video {
 .pb-\[2vw\] {
 	padding-bottom: 2vw;
 }
-.pt-4 {
-	padding-top: 1rem;
+.pt-1 {
+	padding-top: 0.25rem;
 }
 .pl-\[5px\] {
 	padding-left: 5px;
@@ -930,9 +1162,6 @@ video {
 }
 .pb-\[6px\] {
 	padding-bottom: 6px;
-}
-.pt-1 {
-	padding-top: 0.25rem;
 }
 .pl-2 {
 	padding-left: 0.5rem;
@@ -949,32 +1178,59 @@ video {
 .pt-3 {
 	padding-top: 0.75rem;
 }
-.pr-1 {
-	padding-right: 0.25rem;
-}
-.pt-\[10px\] {
-	padding-top: 10px;
-}
-.pt-\[8px\] {
-	padding-top: 8px;
-}
-.pb-\[8px\] {
-	padding-bottom: 8px;
+.pt-4 {
+	padding-top: 1rem;
 }
 .pb-2 {
 	padding-bottom: 0.5rem;
 }
+.pl-3 {
+	padding-left: 0.75rem;
+}
 .pt-2 {
 	padding-top: 0.5rem;
+}
+.pl-\[25px\] {
+	padding-left: 25px;
+}
+.pr-\[25px\] {
+	padding-right: 25px;
+}
+.pl-\[15px\] {
+	padding-left: 15px;
+}
+.pr-\[15px\] {
+	padding-right: 15px;
+}
+.pt-\[20px\] {
+	padding-top: 20px;
+}
+.pb-\[20px\] {
+	padding-bottom: 20px;
+}
+.pt-\[14px\] {
+	padding-top: 14px;
+}
+.pb-\[14px\] {
+	padding-bottom: 14px;
+}
+.pt-\[16px\] {
+	padding-top: 16px;
+}
+.pb-\[16px\] {
+	padding-bottom: 16px;
+}
+.text-center {
+	text-align: center;
 }
 .font-neoeb {
 	font-family: NeoEB;
 }
-.font-neom {
-	font-family: NeoM;
-}
 .font-neosb {
 	font-family: NeoSB;
+}
+.font-neom {
+	font-family: NeoM;
 }
 .font-neob {
 	font-family: NeoB;
@@ -994,28 +1250,21 @@ video {
 .text-\[5vw\] {
 	font-size: 5vw;
 }
-.text-lg {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-}
-.text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
 }
 .text-sm {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
-.text-2xl {
-	font-size: 1.5rem;
-	line-height: 2rem;
-}
 .text-xs {
 	font-size: 0.75rem;
 	line-height: 1rem;
 }
-.text-\[15px\] {
-	font-size: 15px;
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
 }
 .text-\[12px\] {
 	font-size: 12px;
@@ -1023,26 +1272,19 @@ video {
 .text-\[10px\] {
 	font-size: 10px;
 }
-.text-\[20px\] {
-	font-size: 20px;
-}
-.text-\[18px\] {
-	font-size: 18px;
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
 }
 .text-base {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
+.text-\[15px\] {
+	font-size: 15px;
+}
 .font-bold {
 	font-weight: 700;
-}
-.text-\[\#c086c5\] {
-	--tw-text-opacity: 1;
-	color: rgba(192, 134, 197, var(--tw-text-opacity));
-}
-.text-\[\#a7a7aa\] {
-	--tw-text-opacity: 1;
-	color: rgba(167, 167, 170, var(--tw-text-opacity));
 }
 .text-gray-400 {
 	--tw-text-opacity: 1;
@@ -1052,12 +1294,45 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(91, 33, 182, var(--tw-text-opacity));
 }
+.text-\[\#c086c5\] {
+	--tw-text-opacity: 1;
+	color: rgba(192, 134, 197, var(--tw-text-opacity));
+}
+.text-\[\#a7a7aa\] {
+	--tw-text-opacity: 1;
+	color: rgba(167, 167, 170, var(--tw-text-opacity));
+}
+.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
 .text-gray-500 {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-gray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
 .opacity-25 {
 	opacity: 0.25;
+}
+.opacity-20 {
+	opacity: 0.2;
+}
+.opacity-30 {
+	opacity: 0.3;
+}
+.opacity-40 {
+	opacity: 0.4;
 }
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -1066,6 +1341,18 @@ video {
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.duration-100 {
+	transition-duration: 100ms;
+}
+.duration-1000 {
+	transition-duration: 1000ms;
+}
+.duration-500 {
+	transition-duration: 500ms;
+}
+.duration-300 {
+	transition-duration: 300ms;
 }
 
 @font-face {
@@ -1107,4 +1394,7 @@ video {
 .hover\:bg-\[pink\]:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 192, 203, var(--tw-bg-opacity));
+} 
+.hover\:bg-gradient-to-b:hover {
+	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 } 
