--- a/public/views/navbar.ejs
+++ b/public/views/navbar.ejs
@@ -11,10 +11,10 @@
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
-<body class="overflow-hidden">
+<body class="relative overflow-hidden">
   
     <div class="flex flex-col items-center w-16 min-w-[64px] pt-4 bg-gradient-to-b from-purple-200  to-purple-100 border rounded-lg shadow-md">
-      <i class="fas fa-bell text-lg  p-4 text-[#c086c5] border-2 shadow-md rounded-[300px] bg-purple-200"></i>
+      <i class="fas fa-bell text-lg  p-4 text-[#c086c5] border-2 shadow-md rounded-[300px] bg-purple-200 duration-100"></i>
       <i class="fas fa-user text-lg  p-4 text-[#a7a7aa]  "></i>
       <i class="fas fa-comments text-lg  p-4 text-[#a7a7aa] "></i>
       <i class="fas fa-user-friends text-lg  p-4 text-[#a7a7aa]"></i>
@@ -29,7 +29,7 @@
     </div>
 
   
-
+    <script type="module" src="/js/navbar.js" defer></script>
 </body>
 
 </html>
