--- a/public/views/oneToOneChat.ejs
+++ b/public/views/oneToOneChat.ejs
@@ -21,16 +21,14 @@
     <p class="mt-1 ml-1 text-xl font-neoeb">전체</p>
     <div class="user-chat-list"></div>
   </div>
-  <div class="w-[960px] min-w-[961px] p-2 ml-2 border rounded-lg shadow-md bg-white">
-    <p class="mt-1 ml-1 text-xl font-neoeb">채팅방</p>
+  <div class=" w-[960px] min-w-[961px] p-2 ml-2 border rounded-lg shadow-md bg-white">
+    <p class="mt-1 ml-1 text-xl chat-title font-neoeb">채팅방</p>
     <div class="mb-2 overflow-x-hidden overflow-y-scroll display-container custom-scroll">
       <img src="asset/3.png" alt="" class="fixed w-[900px] mt-36 ml-10">
       <div class="chat-list  relative flex flex-col pt-1 pb-1  rounded-md h-[790px]   "></div>
     </div>
-     <div class="flex ">
-      <input type="text" class="chatting-input w-[850px] h-[80px] rounded-md border ">
-      <div type="text" class="send-button w-[100px] h-[80px] rounded-md text-center bg-purple-300 ml-2"><p class="text-white mt-7 font-neob">전송</p></div>
-    </div>
+    <div class=" chat"></div>
+     
    
   </div>
 
