--- a/public/css/index.css
+++ b/public/css/index.css
@@ -613,14 +613,11 @@ video {
 .ml-3 {
 	margin-left: 0.75rem;
 }
+.ml-2 {
+	margin-left: 0.5rem;
+}
 .mt-1 {
 	margin-top: 0.25rem;
-}
-.ml-\[1vw\] {
-	margin-left: 1vw;
-}
-.mr-\[1vw\] {
-	margin-right: 1vw;
 }
 .mb-4 {
 	margin-bottom: 1rem;
@@ -633,9 +630,6 @@ video {
 }
 .ml-\[4vw\] {
 	margin-left: 4vw;
-}
-.ml-2 {
-	margin-left: 0.5rem;
 }
 .mb-1 {
 	margin-bottom: 0.25rem;
@@ -661,9 +655,6 @@ video {
 .ml-10 {
 	margin-left: 2.5rem;
 }
-.mt-7 {
-	margin-top: 1.75rem;
-}
 .flex {
 	display: flex;
 }
@@ -685,26 +676,56 @@ video {
 .h-12 {
 	height: 3rem;
 }
-.h-\[5vh\] {
-	height: 5vh;
-}
-.h-\[87vh\] {
-	height: 87vh;
+.h-\[80px\] {
+	height: 80px;
 }
 .h-\[100vh\] {
 	height: 100vh;
 }
-.h-\[8vh\] {
-	height: 8vh;
-}
 .h-\[790px\] {
 	height: 790px;
 }
-.h-\[80px\] {
-	height: 80px;
+.h-full {
+	height: 100%;
 }
-.h-\[20px\] {
-	height: 20px;
+.h-\[800px\] {
+	height: 800px;
+}
+.h-\[1000px\] {
+	height: 1000px;
+}
+.h-96 {
+	height: 24rem;
+}
+.h-\[600px\] {
+	height: 600px;
+}
+.h-\[650px\] {
+	height: 650px;
+}
+.h-\[9000px\] {
+	height: 9000px;
+}
+.h-\[900px\] {
+	height: 900px;
+}
+.h-\[9800px\] {
+	height: 9800px;
+}
+.h-\[980px\] {
+	height: 980px;
+}
+.h-\[970px\] {
+	height: 970px;
+}
+.h-\[960px\] {
+	height: 960px;
+}
+.h-\[60px\] {
+	height: 60px;
+}
+.h-\[50px\] {
+	height: 50px;
 }
 .w-\[10vw\] {
 	width: 10vw;
@@ -733,8 +754,17 @@ video {
 .w-\[185px\] {
 	width: 185px;
 }
+.w-\[830px\] {
+	width: 830px;
+}
+.w-\[100px\] {
+	width: 100px;
+}
 .w-\[20px\] {
 	width: 20px;
+}
+.w-10 {
+	width: 2.5rem;
 }
 .w-\[100vw\] {
 	width: 100vw;
@@ -754,9 +784,6 @@ video {
 .w-80 {
 	width: 20rem;
 }
-.w-\[25vw\] {
-	width: 25vw;
-}
 .w-16 {
 	width: 4rem;
 }
@@ -772,14 +799,23 @@ video {
 .w-\[900px\] {
 	width: 900px;
 }
-.w-\[850px\] {
-	width: 850px;
+.w-full {
+	width: 100%;
 }
-.w-\[100px\] {
-	width: 100px;
+.w-44 {
+	width: 11rem;
 }
-.w-\[830px\] {
-	width: 830px;
+.w-\[200px\] {
+	width: 200px;
+}
+.w-\[300px\] {
+	width: 300px;
+}
+.w-\[400px\] {
+	width: 400px;
+}
+.w-\[280px\] {
+	width: 280px;
 }
 .min-w-\[208px\] {
 	min-width: 208px;
@@ -823,17 +859,14 @@ video {
 .justify-center {
 	justify-content: center;
 }
-.justify-between {
-	justify-content: space-between;
-}
-.justify-around {
-	justify-content: space-around;
-}
 .overflow-hidden {
 	overflow: hidden;
 }
 .overflow-x-hidden {
 	overflow-x: hidden;
+}
+.overflow-y-hidden {
+	overflow-y: hidden;
 }
 .overflow-y-scroll {
 	overflow-y: scroll;
@@ -874,12 +907,25 @@ video {
 .border-b {
 	border-bottom-width: 1px;
 }
-.border-r {
-	border-right-width: 1px;
-}
 .border-purple-200 {
 	--tw-border-opacity: 1;
 	border-color: rgba(221, 214, 254, var(--tw-border-opacity));
+}
+.border-gray-50 {
+	--tw-border-opacity: 1;
+	border-color: rgba(249, 250, 251, var(--tw-border-opacity));
+}
+.border-gray-600 {
+	--tw-border-opacity: 1;
+	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+.border-purple-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(167, 139, 250, var(--tw-border-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -913,13 +959,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-black {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
 .bg-green-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-purple-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1054,12 +1100,6 @@ video {
 .text-\[10px\] {
 	font-size: 10px;
 }
-.text-\[3\.4vw\] {
-	font-size: 3.4vw;
-}
-.text-\[2\.5vw\] {
-	font-size: 2.5vw;
-}
 .text-\[5vw\] {
 	font-size: 5vw;
 }
@@ -1075,8 +1115,11 @@ video {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
-.font-bold {
-	font-weight: 700;
+.text-\[20px\] {
+	font-size: 20px;
+}
+.text-\[16px\] {
+	font-size: 16px;
 }
 .text-\[\#a7a7aa\] {
 	--tw-text-opacity: 1;
@@ -1098,6 +1141,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
 .text-gray-400 {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
@@ -1105,10 +1152,6 @@ video {
 .text-gray-600 {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-.text-white {
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .opacity-25 {
 	opacity: 0.25;
@@ -1122,6 +1165,10 @@ video {
 }
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl {
+	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .duration-500 {
