--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -9,16 +9,20 @@
 </head>
 <body>
   
-  <form method="post" action="/register" class="flex flex-col w-[100vw] h-[100vh] justify-center items-center">
-    <h1 class="text-[5vw] mb-4">register</h1>
-    <div class="flex mb-[2vw]"><p class="w-[12vw]">이름</p><input class="border user-pw " type="text" name="name"></div>
-    <div class="flex mb-[2vw]"><p class="w-[12vw]">이메일</p><input class="border user-id" type="text" name="email"></div>
-    <div class="flex mb-[2vw]"><p class="w-[12vw]">비밀번호</p><input class="border user-pw " type="password" name="passwd"></div>
-    <div class="flex mb-[2vw]"><p class="w-[12vw]">비밀번호 확인</p><input class="border user-pw " type="password" name="passwdConfirm"></div>
-    <div class="flex">
-      <button type="submit" class="login-btn mt-[2vw] border p-[1vw] hover:bg-[pink] ml-[10vw] ">회원가입</button>
-    </div>
-  </form>
+   
+      <p class="font-neob text-[20px]">회원가입</p>
+      <p class="font-neom text-[16px] text-gray-500">닉네임</p>
+      <input class="w-[280px] p-2 border border-gray-400 rounded-md user-pw" type="text" name="name" >
+      <p class="font-neom text-[16px] text-gray-500">이메일</p>
+      <input class="w-[280px] p-2 border border-gray-400 rounded-md user-pw" type="text" name="name" >
+      <p class="font-neom text-[16px] text-gray-500">비밀번호</p>
+      <input class="w-[280px] p-2 border border-gray-400 rounded-md user-pw" type="text" name="name" >
+      <p class="font-neom text-[16px] text-gray-500">비밀번호 확인</p>
+      <input class="w-[280px] p-2 border border-gray-400 rounded-md user-pw" type="text" name="name" >
+      <div class="w-[280px] h-[50px] p-2 border bg-purple-400 rounded-md user-pw"><p class="font-neob text-[16px] text-white">회원가입</p></div>
+    <!-- <div class=" w-[400px] h-[650px] rounded-2xl shadow-xl bg-white"></div> -->
+   
+ 
   <script type="module" src="/js/register.js"></script>
 </body>
 </html>
