--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>냥이톡</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
-  <div class=" bg-black flex w-[100vw] h-[100vh]">
-    <h3>로딩중</h3>
-  </div>
+<body class="overflow-y-hidden">
+     <img src="asset/cattalkloading.gif" class="w-full ">
+  
   <script type="module" src="/js/index.js"></script>
 </body>
 </html>
